--- a/contact.html
+++ b/contact.html
@@ -170,18 +170,20 @@
               <div>
                 <i class="fa fa-map-marker"></i>
                 <p>
-                  <br> SG-11
+                  <br> Brasília DF UnB SG-11 - AT 3/4
                 </p>
               </div>
 
               <div>
                 <i class="fa fa-envelope"></i>
-                <p>enetec@enetec.unb.br</p>
+                <p>contato@enetec.unb.br</p>
               </div>
 
               <div>
                 <i class="fa fa-phone"></i>
-                <p>(61) 98432-6781</p>
+                <p>Telefone: (61) 3107-1036 <br>
+                  Diretor de Comercial (Marcos) (61) 9 8165-7690<br>
+              <a href="https://api.whatsapp.com/send?phone=5561991033751&text=olá!%20vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp clicando aqui</a></p>
               </div>
             </div>
 
@@ -237,7 +239,7 @@
     <!-- #contact -->
 
   </main>
-
+  <div id="map"></div>
   <!--==========================
       Footer
       ============================-->
@@ -301,6 +303,23 @@
     })();
   </script>
   <!--End of Tawk.to Script-->
+  <script>
+      function initMap() {
+        var uluru = {lat: -15.765883, lng: -47.872137};
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 20,
+          center: uluru
+        });
+        var marker = new google.maps.Marker({
+          position: uluru,
+          map: map
+        });
+      }
+    </script>
+  <script defer
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDsI0QHnCcyoVC45De8bqNGA2oeXXtrEos&callback=initMap">
+  </script>
+<script async src="js/google_map.js"></script>
 </body>
 
 </html>
